--- a/app/src/main/res/menu/events.xml
+++ b/app/src/main/res/menu/events.xml
@@ -10,6 +10,10 @@
         android:icon="@drawable/ic_refresh"
         app:showAsAction="ifRoom" />
 
+    <item android:id="@+id/action_about"
+        android:title="@string/title_activity_about"
+        app:showAsAction="never" />
+
     <item android:id="@+id/action_logout"
         android:title="@string/action_logout"
         app:showAsAction="never" />
