--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -129,4 +129,15 @@
         <item name="android:textAllCaps">true</item>
         <item name="android:textColor">?android:textColorPrimary</item>
     </style>
+
+    <style name="about_text">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textAppearance">@style/Base.TextAppearance.AppCompat.Body1</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:paddingBottom">@dimen/keyline_1</item>
+        <item name="android:paddingTop">@dimen/keyline_1</item>
+        <item name="android:background">?android:attr/selectableItemBackground</item>
+    </style>
 </resources>
