--- a/app/src/main/res/layout/activity_events.xml
+++ b/app/src/main/res/layout/activity_events.xml
@@ -1,21 +1,32 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_height="fill_parent"
-    android:layout_width="fill_parent"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
+<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/drawer_layout"
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context="com.bdlabs_linku.linku.EventsActivity" >
 
-    <com.bdlabs_linku.linku.FragmentViewPager
-        android:id="@+id/pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_height="fill_parent"
+        android:layout_width="fill_parent"
+        xmlns:fab="http://schemas.android.com/apk/res-auto" >
 
-    <com.getbase.floatingactionbutton.FloatingActionButton
-        android:id="@+id/add_event_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        fab:fab_icon="@drawable/ic_plus"
-        fab:fab_colorNormal="@color/accent"
-        fab:fab_colorPressed="@color/accent_darker"
-        android:layout_gravity="right|bottom" />
-</FrameLayout>
+        <com.bdlabs_linku.linku.FragmentViewPager
+            android:id="@+id/pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/add_event_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fab:fab_icon="@drawable/ic_plus"
+            fab:fab_colorNormal="@color/accent"
+            fab:fab_colorPressed="@color/accent_darker"
+            android:layout_gravity="right|bottom" />
+    </FrameLayout>
+
+    <!-- Nav drawer -->
+    <include layout="@layout/navigation_drawer" />
+
+</android.support.v4.widget.DrawerLayout>
