--- a/app/src/main/res/layout/dialog_user.xml
+++ b/app/src/main/res/layout/dialog_user.xml
@@ -52,7 +52,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Checked in."
+            android:text="@string/message_checkedin"
             android:id="@+id/checkedin"
             android:gravity="center_vertical"
             android:paddingBottom="@dimen/keyline_1"
