--- a/app/src/main/res/layout-v21/fragment_edit_event.xml
+++ b/app/src/main/res/layout-v21/fragment_edit_event.xml
@@ -56,7 +56,7 @@
                     android:textColor="@color/black_87"
                     android:textSize="@dimen/add_event_title"
                     android:hint="@string/placeholder_events_item_title"
-                    android:textColorHint="@color/edit_hint"
+                    android:textColorHint="@color/hint_dark"
                     android:imeOptions="actionNext" />
             </LinearLayout>
 
@@ -74,7 +74,7 @@
                     android:textColor="@color/black_87"
                     android:textSize="@dimen/add_event_fields"
                     android:hint="@string/placeholder_events_item_description"
-                    android:textColorHint="@color/edit_hint"
+                    android:textColorHint="@color/hint_dark"
                     android:imeOptions="actionNext" />
 
             </LinearLayout>
@@ -114,7 +114,7 @@
                             android:layout_height="@dimen/vertical_48dp_minus_8dp"
                             android:layout_marginBottom="@dimen/keyline_1_minus_8dp"
                             android:id="@+id/event_day_input"
-                            android:textColor="@color/edit_hint"
+                            android:textColor="@color/hint_dark"
                             android:textSize="@dimen/add_event_fields"
                             android:textAllCaps="false"
                             android:gravity="center_vertical|left"
@@ -139,7 +139,7 @@
                             android:layout_height="@dimen/vertical_48dp_minus_8dp"
                             android:layout_marginBottom="@dimen/keyline_1_minus_8dp"
                             android:id="@+id/event_time_input"
-                            android:textColor="@color/edit_hint"
+                            android:textColor="@color/hint_dark"
                             android:textSize="@dimen/add_event_fields"
                             android:text="@string/placeholder_events_item_time"
                             android:textAllCaps="false"
