--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -1,71 +1,82 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/primary"
     tools:context="com.bdlabs_linku.linku.AboutActivity"
-    android:gravity="center_vertical">
+    android:layout_height="match_parent"
+    android:layout_width="match_parent">
 
-    <LinearLayout
-        android:id="@+id/imageViewContainer"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal" >
+    <include layout="@layout/toolbar_actionbar"/>
 
-        <ImageView
-            android:layout_width="160dp"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:gravity="center_vertical">
+
+
+        <LinearLayout
+            android:id="@+id/imageViewContainer"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/imageView"
-            android:contentDescription="@string/linku_logo"
-            android:src="@drawable/linku_logo_white"
-            android:layout_gravity="bottom" />
+            android:gravity="center_horizontal"
+            android:layout_marginRight="36dp"
+            android:layout_marginEnd="36dp">
 
-    </LinearLayout>
+            <ImageView
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageView"
+                android:contentDescription="@string/linku_logo"
+                android:src="@drawable/linku_logo_white"
+                android:layout_gravity="bottom" />
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/imageViewContainer"
-        android:id="@+id/linearLayout2"
-        android:layout_marginTop="@dimen/keyline_1"
-        android:layout_marginBottom="@dimen/keyline_1">
+        </LinearLayout>
 
-        <TextView android:text="Version" android:layout_width="fill_parent"
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
-            android:textColor="@android:color/white"
-            android:layout_marginBottom="@dimen/keyline_1_minus_8dp"
-            android:id="@+id/about_version" />
+            android:layout_below="@+id/imageViewContainer"
+            android:id="@+id/linearLayout2"
+            android:layout_marginTop="@dimen/keyline_1"
+            android:layout_marginBottom="@dimen/keyline_1">
 
-        <TextView android:text="@string/linku_website"
-            android:id="@+id/about_website"
-            style="@style/about_text" />
-    </LinearLayout>
+            <TextView android:text="Version" android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
+                android:textColor="@android:color/white"
+                android:layout_marginBottom="@dimen/keyline_1_minus_8dp"
+                android:id="@+id/about_version" />
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/linearLayout2"
-        android:layout_marginTop="@dimen/keyline_1"
-        android:layout_marginBottom="@dimen/keyline_1">
+            <TextView android:text="@string/linku_website"
+                android:id="@+id/about_website"
+                style="@style/about_text" />
+        </LinearLayout>
 
-        <TextView android:text="@string/about_tos"
-            android:id="@+id/about_tos"
-            style="@style/about_text" />
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/linearLayout2"
+            android:layout_marginTop="@dimen/keyline_1"
+            android:layout_marginBottom="@dimen/keyline_1">
 
-        <TextView android:text="@string/about_pp"
-            android:id="@+id/about_pp"
-            style="@style/about_text" />
+            <TextView android:text="@string/about_tos"
+                android:id="@+id/about_tos"
+                style="@style/about_text" />
 
-        <TextView android:text="@string/about_safety"
-            android:id="@+id/about_safety"
-            style="@style/about_text" />
+            <TextView android:text="@string/about_pp"
+                android:id="@+id/about_pp"
+                style="@style/about_text" />
 
-    </LinearLayout>
+            <TextView android:text="@string/about_safety"
+                android:id="@+id/about_safety"
+                style="@style/about_text" />
 
-</RelativeLayout>
+        </LinearLayout>
+
+    </RelativeLayout>
+</FrameLayout>
