--- a/app/src/main/res/layout/activity_edit_event.xml
+++ b/app/src/main/res/layout/activity_edit_event.xml
@@ -2,6 +2,4 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/container"
              android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context="com.bdlabs_linku.linku.EditEventActivity"
-             tools:ignore="MergeRootFrame" />
+             android:layout_height="match_parent" />
