--- a/app/src/main/res/layout/navigation_drawer.xml
+++ b/app/src/main/res/layout/navigation_drawer.xml
@@ -1,13 +1,10 @@
 <FrameLayout
     android:background="#cccc"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navdrawer"
     android:layout_width="@dimen/navigation_drawer_width"
     android:layout_height="match_parent"
-    android:layout_gravity="start"
-    android:fitsSystemWindows="true"
-    tools:context="com.bdlabs_linku.linku.BaseActivity" >
+    android:layout_gravity="start">
 
     <LinearLayout android:layout_width="match_parent"
         android:layout_height="match_parent"
