--- a/app/src/main/res/menu/create_new_event.xml
+++ b/app/src/main/res/menu/create_new_event.xml
@@ -2,7 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/action_confirm"
         android:icon="@drawable/ic_confirm"
-        android:title="@string/action_confirm"
+        android:title="@string/action_save"
         app:showAsAction="always"  />
 
 </menu>
