--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,13 +16,12 @@
     <color name="white60">#99ffffff</color>
     <color name="white85">#d9ffffff</color>
 
-    <color name="hint">#99ffffff</color>
+    <!-- Edit text fields -->
+    <color name="hint_dark">#1A000000</color>
+    <color name="hint_light">#99ffffff</color>
 
     <!-- Text colors -->
     <color name="black_87">#DB000000</color>
-
-    <!-- Edit text fields -->
-    <color name="edit_hint">#1A000000</color>
 
     <color name="white_darker">#ffd9d9d9</color>
 
